# crns_footprint_gui

./: .gitignore  CITATION.cff  LICENSE  Neptoon_tools.py  README.md  footprint_gui.py  pyproject.toml  requirements.txt  run_streamlit.bat
examples/: densityMapEpithermal_20220105-0548_N10000000.csv  densityMapEpithermal_20220105-0612_N10000000.csv  densityMapEpithermal_20220105-0831_N10000000.csv  detectorOrigins20220105-0548_N10000000.csv  detectorOrigins20220105-0612_N10000000.csv  detectorOrigins20220105-0831_N10000000.csv
lib/: Schroen2022hess.py  functions.py  uranos.py
pages/: Footprint_Analysis.py  Incoming_neutrons.py  Signal_Contributions.py  Soil_parameters.py  Vertical_averaging.py
