[project]
name = "neptoon-tools"
version = "0.1.0"
description = "CRNS Footprint & Neptoon tools GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "figurex>=0.2.13",
    "matplotlib>=3.10.5",
    "neptoon>=0.12.0",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "scipy>=1.15.3",
    "streamlit>=1.48.0",
]
