[project]
name = "neptoon-tools"
version = "0.1.0"
description = "CRNS Footprint & Neptoon tools GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "branca>=0.8.2",
    "figurex>=0.2.13",
    "folium>=0.20.0",
    "matplotlib>=3.10.5",
    "neptoon>=0.12.0",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "streamlit-folium>=0.25.3",
    "streamlit[pdf]>=1.48.0",
]
